{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 160,
  "lineage": "9aae4f29-f80d-8957-8219-4deec8f72623",
  "resources": [
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3da4d122f09c502",
            "arn": "arn:aws:ec2:us-east-1:408355232675:elastic-ip/eipalloc-0c3da4d122f09c502",
            "association_id": "eipassoc-089f21af91dd672dc",
            "domain": "vpc",
            "id": "eipalloc-0c3da4d122f09c502",
            "network_border_group": "us-east-1",
            "network_interface": "eni-051264381542706a6",
            "private_dns": "ip-10-0-2-13.ec2.internal",
            "private_ip": "10.0.2.13",
            "public_dns": "ec2-44-195-130-54.compute-1.amazonaws.com",
            "public_ip": "44.195.130.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408355232675:internet-gateway/igw-02d4b82a8c0babbfa",
            "id": "igw-02d4b82a8c0babbfa",
            "owner_id": "408355232675",
            "tags": {
              "Name": "pwc-network"
            },
            "tags_all": {
              "Name": "pwc-network"
            },
            "vpc_id": "vpc-057411fd5f3aa10d3"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3da4d122f09c502",
            "association_id": "eipassoc-089f21af91dd672dc",
            "connectivity_type": "public",
            "id": "nat-09b256dead2d21afe",
            "network_interface_id": "eni-051264381542706a6",
            "private_ip": "10.0.2.13",
            "public_ip": "44.195.130.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0083d7159503b41af"
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408355232675:route-table/rtb-035faf89fce92b5d3",
            "id": "rtb-035faf89fce92b5d3",
            "owner_id": "408355232675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09b256dead2d21afe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-057411fd5f3aa10d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_nat_gateway.nat",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408355232675:route-table/rtb-0f3036f9efdc9a9f6",
            "id": "rtb-0f3036f9efdc9a9f6",
            "owner_id": "408355232675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d4b82a8c0babbfa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pwc-network"
            },
            "tags_all": {
              "Name": "pwc-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-057411fd5f3aa10d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.igw",
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0889700b6c7a139a3",
            "route_table_id": "rtb-035faf89fce92b5d3",
            "subnet_id": "subnet-005f61791965964a5"
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_nat_gateway.nat",
            "module.network.module.vpc.aws_route_table.private_rt",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da39d0f0e6d18ee7",
            "route_table_id": "rtb-0f3036f9efdc9a9f6",
            "subnet_id": "subnet-0083d7159503b41af"
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.igw",
            "module.network.module.vpc.aws_route_table.public_rt",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a56853ab58354b56",
            "route_table_id": "rtb-0f3036f9efdc9a9f6",
            "subnet_id": "subnet-00ab09109387cc3c9"
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.igw",
            "module.network.module.vpc.aws_route_table.public_rt",
            "module.network.module.vpc.aws_subnet.public2",
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408355232675:subnet/subnet-005f61791965964a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005f61791965964a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "408355232675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pwc-network"
            },
            "tags_all": {
              "Name": "pwc-network"
            },
            "vpc_id": "vpc-057411fd5f3aa10d3"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408355232675:subnet/subnet-0083d7159503b41af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0083d7159503b41af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "408355232675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pwc-network"
            },
            "tags_all": {
              "Name": "pwc-network"
            },
            "vpc_id": "vpc-057411fd5f3aa10d3"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408355232675:subnet/subnet-00ab09109387cc3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ab09109387cc3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "408355232675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pwc-network"
            },
            "tags_all": {
              "Name": "pwc-network"
            },
            "vpc_id": "vpc-057411fd5f3aa10d3"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408355232675:vpc/vpc-057411fd5f3aa10d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096f401fd81753f41",
            "default_route_table_id": "rtb-03cf9b504e5936998",
            "default_security_group_id": "sg-0a305c50aff37847e",
            "dhcp_options_id": "dopt-0848f1bedd43d67c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057411fd5f3aa10d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cf9b504e5936998",
            "owner_id": "408355232675",
            "tags": {
              "Name": "pwc-network"
            },
            "tags_all": {
              "Name": "pwc-network"
            }
          }
        }
      ]
    }
  ]
}